[gd_scene load_steps=15 format=3 uid="uid://04k1cknsgau2"]

[ext_resource type="Theme" uid="uid://dtljlfpi5hkeh" path="res://resources/themes/styles/main_menu.tres" id="1_qg6q4"]
[ext_resource type="Script" path="res://logic/main_menu/main_menu_settings.gd" id="2_1d5vl"]
[ext_resource type="Texture2D" uid="uid://d235ugdj62yp4" path="res://resources/textures/levels/mainmenu.png" id="3_jwjo4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sp8m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2

[sub_resource type="SystemFont" id="SystemFont_68dow"]
subpixel_positioning = 0
msdf_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xge78"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2
expand_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnrvl"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(1, 1, 1, 0)
border_width_bottom = 2
expand_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imfny"]

[sub_resource type="Theme" id="Theme_bfiil"]
LineEdit/font_sizes/font_size = 40
LineEdit/fonts/font = null
LineEdit/styles/focus = SubResource("StyleBoxFlat_7sp8m")
LineEdit/styles/normal = SubResource("StyleBoxFlat_7sp8m")
OptionButton/fonts/font = SubResource("SystemFont_68dow")
OptionButton/styles/disabled = SubResource("StyleBoxFlat_xge78")
OptionButton/styles/focus = SubResource("StyleBoxFlat_wnrvl")
OptionButton/styles/hover = SubResource("StyleBoxFlat_imfny")
OptionButton/styles/normal = SubResource("StyleBoxFlat_wnrvl")
OptionButton/styles/pressed = SubResource("StyleBoxFlat_wnrvl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6xq1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sewa"]
bg_color = Color(0.8, 0.552941, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rvrb"]
bg_color = Color(0.8, 0.552941, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jy1eo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.407843, 0.407843, 0.407843, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_jq335"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_6sewa")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_2rvrb")
HSlider/styles/slider = SubResource("StyleBoxFlat_jy1eo")

[node name="main_menu_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qg6q4")
script = ExtResource("2_1d5vl")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -260.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jwjo4")
expand_mode = 1

[node name="options_container" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.539
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = 0.119873
offset_bottom = -189.0
theme = SubResource("Theme_bfiil")

[node name="ScrollContainer" type="ScrollContainer" parent="options_container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="options_container/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="VBoxContainer" type="VBoxContainer" parent="options_container/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="window_mode" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "WINDOW MODE"

[node name="resolution" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "RESOLUTION"

[node name="vsync" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "VSYNC"

[node name="fps" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "MAX FPS"

[node name="brightness" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BRIGHTNESS"

[node name="separator" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="sfx" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="music" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "MUSIC"

[node name="separator2" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="keybinds" type="Button" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_6xq1x")
text = "KEYBINDS"
alignment = 0

[node name="separator3" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="debug" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "DEBUG"

[node name="logging" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LOGGING"

[node name="VBoxContainer2" type="VBoxContainer" parent="options_container/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="window_mode" type="OptionButton" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
allow_reselect = true

[node name="resolution_value" type="OptionButton" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
allow_reselect = true

[node name="vsync_value" type="OptionButton" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
allow_reselect = true

[node name="fps_value" type="LineEdit" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
max_length = 3
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="brightness_box" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="brightness_value" type="HSlider" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/brightness_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jq335")
max_value = 2.0
step = 0.1
value = 1.0

[node name="brightness_value_label" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/brightness_box/brightness_value"]
layout_mode = 2
anchor_left = 1.047
anchor_right = 1.047
anchor_bottom = 1.0
offset_left = 0.0439911
offset_right = 50.044
theme_override_font_sizes/font_size = 30
text = "1
"
vertical_alignment = 1

[node name="separator" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="sfx_box" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="sfx_value" type="HSlider" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/sfx_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jq335")
value = 50.0

[node name="sfx_value_label" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/sfx_box/sfx_value"]
layout_mode = 2
anchor_left = 1.047
anchor_right = 1.047
anchor_bottom = 1.0
offset_left = 0.0439911
offset_right = 50.044
theme_override_font_sizes/font_size = 30
text = "50
"
vertical_alignment = 1

[node name="music_box" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="music_value" type="HSlider" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/music_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jq335")
value = 50.0

[node name="music_value_label" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/music_box/music_value"]
layout_mode = 2
anchor_left = 1.047
anchor_right = 1.047
anchor_bottom = 1.0
offset_left = 0.0439911
offset_right = 50.044
theme_override_font_sizes/font_size = 30
text = "50
"
vertical_alignment = 1

[node name="separator2" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="separator3" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="separator4" type="Label" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="debug_value" type="OptionButton" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
item_count = 2
selected = 0
popup/item_0/text = "ON"
popup/item_0/id = 1
popup/item_1/text = "OFF"
popup/item_1/id = 0

[node name="logging_value" type="OptionButton" parent="options_container/ScrollContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
item_count = 2
selected = 0
popup/item_0/text = "ON"
popup/item_0/id = 1
popup/item_1/text = "OFF"
popup/item_1/id = 0

[node name="back_to_main_menu_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -157.0
offset_right = 394.0
offset_bottom = -100.0
grow_vertical = 0

[node name="back" type="Button" parent="back_to_main_menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_6xq1x")
text = "BACK TO MAIN MENU"
alignment = 0

[connection signal="pressed" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer/keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="item_selected" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/window_mode" to="." method="_on_window_mode_item_selected"]
[connection signal="item_selected" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/resolution_value" to="." method="_on_resolution_value_item_selected"]
[connection signal="item_selected" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/vsync_value" to="." method="_on_vsync_value_item_selected"]
[connection signal="text_submitted" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/fps_value" to="." method="_on_fps_value_text_submitted"]
[connection signal="value_changed" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/brightness_box/brightness_value" to="." method="_on_brightness_value_value_changed"]
[connection signal="value_changed" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/sfx_box/sfx_value" to="." method="_on_sfx_value_value_changed"]
[connection signal="value_changed" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/music_box/music_value" to="." method="_on_music_value_value_changed"]
[connection signal="item_selected" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/debug_value" to="." method="_on_debug_value_item_selected"]
[connection signal="item_selected" from="options_container/ScrollContainer/HBoxContainer/VBoxContainer2/logging_value" to="." method="_on_logging_value_item_selected"]
[connection signal="pressed" from="back_to_main_menu_container/back" to="." method="_on_back_pressed"]
